--- a/src/index.scss
+++ b/src/index.scss
@@ -21,7 +21,9 @@ h4,
 h5,
 h6,
 label,
-p {
+p,
+button,
+textarea {
   margin: 0;
   padding: 0;
 }
