--- a/src/styles/Category.scss
+++ b/src/styles/Category.scss
@@ -48,23 +48,13 @@
     }
 
     .icon {
-      margin: 0 5px;
-      width: 40px;
-      height: 40px;
+      margin: 0 10px;
+      width: 50px;
+      height: 50px;
     }
 
     .info {
       display: block;
-    }
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  .Category {
-    .icon {
-      margin: 0 5px;
-      width: 50px;
-      height: 50px;
     }
   }
 }
