--- a/src/styles/TodoInfo.scss
+++ b/src/styles/TodoInfo.scss
@@ -5,6 +5,7 @@
   border-radius: 2mm;
   display: flex;
   flex-direction: column;
+  width: 90%;
 
   .buttons {
     align-self: flex-end;
